fixed table overflow, text button overflow,

--- a/DS4SI-tool/www/my-shiny.css
+++ b/DS4SI-tool/www/my-shiny.css
@@ -96,8 +96,13 @@ a {
     box-shadow: none;
     border: none;
     color: #f5f5f5;
-    font-weight: 350;
+    font-weight: 300;
     font-family: "Roboto", Helvetica, Arial, sans-serif;
+    max-width: 100%;
+    word-wrap: break-word;
+    white-space: normal;
+    display: inline-block;
+    padding: 10px;
 }
 
 
@@ -106,7 +111,7 @@ a {
   height: 70px;
   font-size: 1.35em;
   font-weight: 500;
-  padding: 10px 0 10px 0;
+  /*padding: 10px 0 10px 0;*/
 }
 
 hr {
